<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.martinez.arduinoband.MainActivity">
    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyestado">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                android:textSize="18sp"
                android:id="@+id/estado"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/lyestado"
            android:gravity="center_horizontal"
            android:id="@+id/lyScanMode"
            android:visibility="invisible"
            >
            <ToggleButton
                android:id="@+id/ScanMode"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/ScanMode"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/lyLogo"
            android:layout_below="@id/lyestado"
            android:visibility="visible"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dispositivos"
                android:id="@+id/tvDispositivos"
                android:textSize="15sp"
                />


            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:layout_gravity="bottom"
                android:id="@+id/lstDisponibles">
            </ListView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lyBuscar"
            android:layout_below="@id/lyLogo"
            android:visibility="visible">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnBuscar"
                android:id="@+id/btnBuscar"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/lyLogo"
            android:id="@+id/btConexiones"
            android:gravity="center"
            android:visibility="visible"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sonar"
                android:id="@+id/sonar"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desvincular"
                android:id="@+id/ApagarS"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btConexiones"
            android:id="@+id/lySignal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/signal"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/tvSignal"
                android:textSize="20sp"
                android:textAlignment="textEnd"
                android:id="@+id/tvSignal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lySignal"
            android:id="@+id/lySeek">
            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="120"
                android:progress="70"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lySeek">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/DistAprox"
                />
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/mts"
                android:id="@+id/distElegida"
                />
        </LinearLayout>
</RelativeLayout>
</android.support.constraint.ConstraintLayout>
